@@ -1,10 +1,6 @@
-09/27/2025:
-[!] Hey! I'm probably going to take a small break from adding suggestions.
-It's been getting a little much, suggestion form will still be up but I'm
-probably going to slow down and work on some other features and bugs first.
-I appreciate all the suggestions though! It's just with all the new users
-and everything it's been getting a little much, I'm a solo developer after
-all.
-[+] Fixed Talking Angela (Thanks for the bug report Jonathon)
-[-] Removed Moto X3M & Moto X3M Winter due to them being broken. Will
-re-add when I decide to fix them. (Thanks for the bug report zekes37)
+11/1/2025:
+[!] Hey again! Sorry for such a delay on the update, I've been a little busy
+but I'm back.
+[+] Added Kindergarten 1
+[+] Added Kindergarten 2
+[+] Added Kindergarten 3
